// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User should get himself when querying for a specific user 1`] = `
Object {
  "email": "john@doe.com",
  "firstName": "John",
  "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
  "isAdmin": false,
  "lastName": "Doe",
}
`;

exports[`User should get only himself when querying for users 1`] = `
Array [
  Object {
    "email": "john@doe.com",
    "firstName": "John",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": false,
    "lastName": "Doe",
  },
]
`;

exports[`User should update email of himself 1`] = `
Object {
  "user": Object {
    "email": "new@mail.com",
    "firstName": "John",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": false,
    "lastName": "Doe",
  },
}
`;

exports[`User should update firstName of himself 1`] = `
Object {
  "user": Object {
    "email": "john@doe.com",
    "firstName": "newName",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": false,
    "lastName": "Doe",
  },
}
`;

exports[`User should update lastName of himself 1`] = `
Object {
  "user": Object {
    "email": "john@doe.com",
    "firstName": "John",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": false,
    "lastName": "newName",
  },
}
`;
